Первая версия пре-коммита

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,5 +1,5 @@
 - id: precheck
   name: Project precheck
-  entry: python3 precheck.py
+  entry: ./precheck.py
   language: script
   pass_filenames: false
