--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,5 +1,5 @@
   - id: my-custom-hook
     name: My custom hook
-    entry: precheck.py
+    entry: ./precheck.py
     language: python
     pass_filenames: false
